@@ -12,7 +12,7 @@ RELEASE = matplotlib-${VERSION}
 
 clean: 
 	${PYTHON} setup.py clean;\
-	rm -f *.png *.ps *.eps *.svg
+	rm -f *.png *.ps *.eps *.svg *.jpg
 	find . -name "_tmp*.py" | xargs rm -f;\
 	find . \( -name "*~" -o -name "*.pyc" \) | xargs rm -f;\
 	find examples \( -name "*.svg" -o -name "*.png" -o -name "*.ps"  -o -name "*.jpg" -o -name "*.eps" -o -name "*.tar" -name "*.gz" \) | xargs rm -f
